--- a/RecSysSummerSchool2019/pom.xml
+++ b/RecSysSummerSchool2019/pom.xml
@@ -3,9 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.uniba.dib.swap</groupId>
-	<artifactId>MiniConverseDialogManager</artifactId>
+	<artifactId>RecSysSummerSchool2019</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MiniConverseDialogManager</name>
+	<name>RecSysSummerSchool2019</name>
+	<properties>
+    	<maven.compiler.source>1.7</maven.compiler.source>
+    	<maven.compiler.target>1.7</maven.compiler.target>
+  	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.cloud</groupId>
